; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/crkbd/rev1/extr_split_util.c_is_keyboard_master.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/crkbd/rev1/extr_split_util.c_is_keyboard_master.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@is_keyboard_master.usbstate = internal global i32 0, align 4
@OTGPADE = common dso_local global i32 0, align 4
@USBCON = common dso_local global i32 0, align 4
@USBSTA = common dso_local global i32 0, align 4
@VBUS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define weak dso_local i32 @is_keyboard_master() #0 {
  %1 = load i32, i32* @is_keyboard_master.usbstate, align 4
  %2 = icmp eq i32 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  store i32 1, i32* @is_keyboard_master.usbstate, align 4
  br label %4

4:                                                ; preds = %3, %0
  %5 = load i32, i32* @is_keyboard_master.usbstate, align 4
  %6 = icmp eq i32 %5, 1
  %7 = zext i1 %6 to i32
  ret i32 %7
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
